# FidelityFX-FSR2

./: CMakeLists.txt
src/ffx-fsr2-api/: CMakeLists.txt  ffx_fsr2.cpp  ffx_fsr2.h
src/ffx-fsr2-api/gl/: CMakeLists.txt  ffx_fsr2_gl.cpp  ffx_fsr2_gl.h
src/ffx-fsr2-api/gl/shaders/: ffx_fsr2_shaders_gl.cpp  ffx_fsr2_shaders_gl.h
src/ffx-fsr2-api/shaders/: ffx_fsr2_callbacks_glsl2.h
src/ffx-fsr2-api/vk/: ffx_fsr2_vk.cpp  ffx_fsr2_vk.h
